client tests + fixing button alignment

--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -19,9 +19,6 @@
     object-fit: cover;
 }
 
-.info-btn{
-    margin-top: 4px;
-}
 ol{
     list-style-type: none;
 }
